// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockList render correctly 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <a
    className="navbar-brand"
    href="#"
  >
    Transactions Monitor
  </a>
</nav>
`;

exports[`BlockList render correctly with latest block 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <a
    className="navbar-brand"
    href="#transactions"
    onClick={[Function]}
  >
    Transactions Monitor 
    <span
      className="badge badge-info"
      tooltip="Latest Block"
    >
      #
      123456
    </span>
  </a>
</nav>
`;
